# r2-rocker

./: .gitignore  AI-CONTEXT.md  Cargo.toml  PROCESS.md  README.md
.github/workflows/: pages.yml
audits/: 2026-05-07-conformance-audit.md  2026-05-08-phase-6-9light-conformance.md  2026-05-18-post-v0.1.0-conformance.md  2026-05-23-architectural-gaps.md
conversation/: 2026-05-06-design-session-01.md  2026-05-07-design-session-02.md  THEMES.md
crates/r2-bootstrap/: Cargo.toml  README.md  setup-hotspot-auth.sh
crates/r2-bootstrap/src/: lib.rs
crates/r2-cbor/: Cargo.toml  SPEC.md
crates/r2-cbor/src/: decode.rs  encode.rs  lib.rs
crates/r2-core/: Cargo.toml
crates/r2-core/src/: beacon.rs  cbor.rs  lib.rs  wire.rs
crates/r2-engine/: Cargo.toml  README.md
crates/r2-engine/src/: action.rs  action_buf.rs  bus.rs  conformance.rs  event.rs  lib.rs  plugin.rs  queue.rs  sentant.rs  tests.rs  timer.rs
crates/r2-esp/: Cargo.toml
crates/r2-esp/src/: beacon.rs  data_tcp.rs  hive_id.rs  l2cap.rs  lib.rs  log_tcp.rs  ota_tcp.rs  reset_tcp.rs  wifi_prov.rs  wifi_sta.rs
crates/r2-fnv/: Cargo.toml  SPEC.md
crates/r2-fnv/src/: lib.rs
crates/r2-route/: Cargo.toml  SPEC.md
crates/r2-route/src/: constants.rs  dedup.rs  engine.rs  hop.rs  jitter.rs  lib.rs  neighbour.rs  path.rs  route_stack.rs  strategy.rs  tests.rs  transport.rs
crates/r2-transport/: Cargo.toml  SPEC.md
crates/r2-transport/src/: format.rs  framing.rs  lib.rs  tcp.rs  tests.rs  transport.rs  udp.rs
crates/r2-trust/: Cargo.toml  SPEC.md
crates/r2-trust/src/: cert.rs  error.rs  group_mgmt.rs  hkdf.rs  join.rs  lib.rs  lifecycle.rs  persist.rs  revocation.rs  tests.rs  types.rs  wire_hmac.rs
crates/r2-wasm/: Cargo.toml
crates/r2-wasm/src/: hive.rs  lib.rs  notekeeper.rs  rocker_hive.rs  rocker_viewer.rs  sync_plugin.rs  wordlist.rs
crates/r2-wasm/test-page/: index.html  install-linux.sh  join.html  manifest.json  notekeeper.html  r2-notekeeper.desktop
crates/r2-wire/: Cargo.toml  SPEC.md
crates/r2-wire/src/: compact.rs  extended.rs  hmac.rs  lib.rs  tests.rs  transcode.rs  types.rs
dashboard/: Cargo.toml  README.md  build.rs  m10_install.sh  m10_sensor.py  test_sender.py
dashboard/src/: access.rs  dashboard.html  main.rs  relay.rs
docs/: ADXL355.md
docs/EVAL-ADICUP360/: PROVENANCE.md
firmware/esp32-s3/: Cargo.toml  README.md  build.rs  sdkconfig.defaults  wifi_config.toml.example
firmware/esp32-s3/devkitc/: Cargo.toml  README.md  build.rs  partitions.csv  sdkconfig.defaults
firmware/esp32-s3/devkitc/.cargo/: config.toml
firmware/esp32-s3/devkitc/src/: adxl355.rs  clock.rs  led.rs  main.rs  ring.rs  sd.rs  sender.rs  sim.rs  wire.rs
firmware/esp32-s3/releases/: README.md
firmware/esp32-s3/src/: adxl355.rs  identity.rs  led.rs  main.rs  sender.rs  wifi.rs
firmware/esp32-s3/xiao/: Cargo.toml  README.md  build.rs  partitions.csv  sdkconfig.defaults
firmware/esp32-s3/xiao/src/: adxl355.rs  battery.rs  capture.rs  identity.rs  led.rs  main.rs  ring.rs  sd.rs  sender.rs  wire.rs
plan/: PLAN.md
specifications/: HARDWARE-WIRING-DEVKITC.md  HARDWARE-WIRING-XIAO.md  HARDWARE-WIRING.md  SECRETS-POLICY.md  SPEC-R2-ROCKER-ACCESS.md  SPEC-R2-ROCKER-BRIDGE.md  SPEC-R2-ROCKER-CAPTURE.md  SPEC-R2-ROCKER-DASHBOARD.md  SPEC-R2-ROCKER-SENSOR-HEALTH.md  SPEC-R2-ROCKER-SENSOR-IDENTIFY.md  SPEC-R2-ROCKER-SENSOR-LIVE-LOGS.md  SPEC-R2-ROCKER-SENSOR-REMOTE-RESET.md  SPEC-R2-ROCKER-SENSOR.md  SPEC-R2-ROCKER-SENTANTS.md  SPEC-R2-ROCKER-SYSTEM.md  SPEC-R2-ROCKER-TIMESYNC.md  SPEC-R2-ROCKER-VIEWER-SENTANT.md  SPEC-R2-ROCKER-WIRE.md
specifications/decisions/: ADR-001-xiao-esp32-s3-carrier.md  ADR-002-revert-active-default-to-devkitc.md
testing/: wire-vectors.json
tools/: build-firmware.sh  setup-firmware.sh  setup-hotspot.sh
tools/r2-rocker-tg/: Cargo.toml  README.md
tools/r2-rocker-tg/src/: main.rs
wasm-viewer/: README.md  index.html
webapp/: README.md  index.html  sw.js
webapp/pkg/: .gitignore  package.json  r2_wasm.d.ts  r2_wasm.js  r2_wasm_bg.wasm  r2_wasm_bg.wasm.d.ts
