[package]
name = "r2-core"
version = "0.1.0"
edition = "2021"
description = "Reality2 protocol stack — facade crate re-exporting r2-fnv, r2-cbor, r2-wire"
repository = "https://github.com/reality2-ai/r2-core"

[features]
default = ["alloc"]
alloc = ["r2-wire/alloc"]
std = ["alloc", "r2-wire/std"]

[dependencies]
r2-fnv = { path = "../r2-fnv" }
r2-cbor = { path = "../r2-cbor" }
r2-wire = { path = "../r2-wire" }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
