[package]
name = "r2-fnv"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "R2-FNV: Event name hashing for Reality2 (FNV-1a 32-bit, no_std)"
readme = "SPEC.md"
repository = "https://github.com/reality2-ai/r2-core"
keywords = ["fnv", "hash", "iot", "mesh", "no-std"]
categories = ["no-std", "embedded"]

[features]
default = []
std = []

[dev-dependencies]
serde_json = "1.0"
