[package]
name = "r2-route"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "R2-ROUTE: Mesh routing primitives for Reality2 (no_std, probabilistic)"
readme = "SPEC.md"
repository = "https://github.com/reality2-ai/r2-core"
keywords = ["routing", "mesh", "iot", "spray-and-wait", "no-std"]
categories = ["no-std", "embedded", "network-programming"]

[dependencies]
heapless = { version = "0.8", default-features = false }
libm = { version = "0.2", default-features = false }
r2-wire = { path = "../r2-wire" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
