[package]
name = "r2-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "R2-TRANSPORT: Transport bindings for Reality2 wire protocol (TCP, UDP, WebSocket)"
readme = "SPEC.md"
repository = "https://github.com/reality2-ai/r2-core"
keywords = ["transport", "tcp", "udp", "mesh", "no-std"]
categories = ["no-std", "embedded", "network-programming"]

[dependencies]
r2-wire = { path = "../r2-wire", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
alloc = []
std = ["alloc", "r2-wire/std"]
