[package]
name = "r2-trust"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "R2-TRUST: Trust group security for Reality2 (certificates, HKDF, join protocol)"
readme = "SPEC.md"
repository = "https://github.com/reality2-ai/r2-core"
keywords = ["trust", "security", "iot", "mesh", "ed25519"]
categories = ["cryptography", "embedded", "network-programming"]

[dependencies]
ed25519-dalek = { version = "=2.1.1", default-features = false, features = ["rand_core"] }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
subtle = { version = "2.5", default-features = false }
displaydoc = { version = "0.2", default-features = false }
r2-wire = { path = "../r2-wire" }

[dev-dependencies]
rand_chacha = "0.3"
serde_json = "1"

[features]
default = []
std = [
    "ed25519-dalek/std",
    "hkdf/std",
    "sha2/std",
    "rand_core/std",
    "chacha20poly1305/std",
]
