[package]
name = "r2-wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "R2-WIRE: Wire protocol framing for Reality2 (compact + extended, no_std)"
readme = "SPEC.md"
repository = "https://github.com/reality2-ai/r2-core"
keywords = ["wire-protocol", "framing", "iot", "mesh", "no-std"]
categories = ["no-std", "embedded", "network-programming"]

[dev-dependencies]
r2-fnv = { path = "../r2-fnv" }
serde_json = "1.0"

[features]
default = []
alloc = []
std = ["alloc"]
